@@ -20,7 +20,10 @@ package no.scienta.unearth.munch.model;
 import no.scienta.unearth.munch.base.AbstractHashableIdentifiable;
 import no.scienta.unearth.munch.id.FaultStrandId;
 
-import java.util.*;
+import java.util.Collection;
+import java.util.List;
+import java.util.Objects;
+import java.util.UUID;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
@@ -49,7 +52,7 @@ public class FaultStrand extends AbstractHashableIdentifiable<FaultStrandId> {
         if (Objects.requireNonNull(causeStrands).isEmpty()) {
             throw new IllegalArgumentException("Expected one or more causes");
         }
-        this.causeStrands = Collections.unmodifiableList(new ArrayList<>(causeStrands));
+        this.causeStrands = List.copyOf(causeStrands);
     }
 
     @Override
